CODEInterpreter/obj/Debug/net6.0/CODEParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\a\Desktop\Interpreter\test\Content\CODE.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Interpreter.Content {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class CODEParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		WHILE=25, NEWLINEOP=26, DATATYPE=27, INTVAL=28, FLOATVAL=29, CHARVAL=30, 
		BOOLVAL=31, STRINGVAL=32, WS=33, NEWLINE=34, FUNCTIONNAME=35, VARIABLENAME=36, 
		COMMENT=37;
	public const int
		RULE_program = 0, RULE_line = 1, RULE_statement = 2, RULE_vardec = 3, 
		RULE_assignment = 4, RULE_assignmentList = 5, RULE_functionCall = 6, RULE_constant = 7, 
		RULE_declarator = 8, RULE_declaratorlist = 9, RULE_whileBlock = 10, RULE_block = 11, 
		RULE_expression = 12, RULE_multOp = 13, RULE_addOp = 14, RULE_compareOp = 15, 
		RULE_logicalOp = 16, RULE_concatOp = 17, RULE_assgnOp = 18;
	public static readonly string[] ruleNames = {
		"program", "line", "statement", "vardec", "assignment", "assignmentList", 
		"functionCall", "constant", "declarator", "declaratorlist", "whileBlock", 
		"block", "expression", "multOp", "addOp", "compareOp", "logicalOp", "concatOp", 
		"assgnOp"
	};

	private static readonly string[] _LiteralNames = {
		null, "'BEGIN CODE'", "'END CODE'", "'='", "':'", "','", "'('", "')'", 
		"'BEGIN WHILE'", "'END WHILE'", "'*'", "'/'", "'%'", "'+'", "'-'", "'>'", 
		"'<'", "'>='", "'<='", "'=='", "'<>'", "'AND'", "'OR'", "'NOT'", "'&'", 
		null, "'$'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "WHILE", "NEWLINEOP", "DATATYPE", "INTVAL", "FLOATVAL", "CHARVAL", 
		"BOOLVAL", "STRINGVAL", "WS", "NEWLINE", "FUNCTIONNAME", "VARIABLENAME", 
		"COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CODE.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public CODEParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ITerminalNode NEWLINE() { return GetToken(CODEParser.NEWLINE, 0); }
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICODEVisitor<TResult> typedVisitor = visitor as ICODEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 38; Match(T__0);
			State = 39; Match(NEWLINE);
			State = 41;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 40; line();
				}
				}
				State = 43;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHILE) | (1L << DATATYPE) | (1L << FUNCTIONNAME) | (1L << VARIABLENAME))) != 0) );
			State = 45; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public WhileBlockContext whileBlock() {
			return GetRuleContext<WhileBlockContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICODEVisitor<TResult> typedVisitor = visitor as ICODEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			int _alt;
			State = 53;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case DATATYPE:
			case FUNCTIONNAME:
			case VARIABLENAME:
				EnterOuterAlt(_localctx, 1);
				{
				State = 48;
				_errHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 47; statement();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 50;
					_errHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
				}
				break;
			case WHILE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 52; whileBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public ITerminalNode NEWLINE() { return GetToken(CODEParser.NEWLINE, 0); }
		public VardecContext vardec() {
			return GetRuleContext<VardecContext>(0);
		}
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICODEVisitor<TResult> typedVisitor = visitor as ICODEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case DATATYPE:
				{
				State = 55; vardec();
				}
				break;
			case VARIABLENAME:
				{
				State = 56; assignment();
				}
				break;
			case FUNCTIONNAME:
				{
				State = 57; functionCall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 60; Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VardecContext : ParserRuleContext {
		public ITerminalNode DATATYPE() { return GetToken(CODEParser.DATATYPE, 0); }
		public DeclaratorlistContext declaratorlist() {
			return GetRuleContext<DeclaratorlistContext>(0);
		}
		public VardecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vardec; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.EnterVardec(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.ExitVardec(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICODEVisitor<TResult> typedVisitor = visitor as ICODEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVardec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VardecContext vardec() {
		VardecContext _localctx = new VardecContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_vardec);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62; Match(DATATYPE);
			State = 63; declaratorlist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		public AssignmentListContext assignmentList() {
			return GetRuleContext<AssignmentListContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.EnterAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.ExitAssignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICODEVisitor<TResult> typedVisitor = visitor as ICODEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_assignment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65; assignmentList();
			State = 66; Match(T__2);
			State = 67; expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentListContext : ParserRuleContext {
		public ITerminalNode[] VARIABLENAME() { return GetTokens(CODEParser.VARIABLENAME); }
		public ITerminalNode VARIABLENAME(int i) {
			return GetToken(CODEParser.VARIABLENAME, i);
		}
		public AssignmentListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignmentList; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.EnterAssignmentList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.ExitAssignmentList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICODEVisitor<TResult> typedVisitor = visitor as ICODEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignmentList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentListContext assignmentList() {
		AssignmentListContext _localctx = new AssignmentListContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_assignmentList);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 69; Match(VARIABLENAME);
			State = 74;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 70; Match(T__2);
					State = 71; Match(VARIABLENAME);
					}
					} 
				}
				State = 76;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionCallContext : ParserRuleContext {
		public ITerminalNode FUNCTIONNAME() { return GetToken(CODEParser.FUNCTIONNAME, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionCall; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.EnterFunctionCall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.ExitFunctionCall(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICODEVisitor<TResult> typedVisitor = visitor as ICODEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionCall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionCallContext functionCall() {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_functionCall);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 77; Match(FUNCTIONNAME);
			State = 78; Match(T__3);
			State = 87;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				State = 79; expression(0);
				State = 84;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
					if ( _alt==1 ) {
						{
						{
						State = 80; Match(T__4);
						State = 81; expression(0);
						}
						} 
					}
					State = 86;
					_errHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(_input,5,_ctx);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstantContext : ParserRuleContext {
		public ITerminalNode INTVAL() { return GetToken(CODEParser.INTVAL, 0); }
		public ITerminalNode FLOATVAL() { return GetToken(CODEParser.FLOATVAL, 0); }
		public ITerminalNode CHARVAL() { return GetToken(CODEParser.CHARVAL, 0); }
		public ITerminalNode BOOLVAL() { return GetToken(CODEParser.BOOLVAL, 0); }
		public ITerminalNode STRINGVAL() { return GetToken(CODEParser.STRINGVAL, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constant; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.EnterConstant(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.ExitConstant(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICODEVisitor<TResult> typedVisitor = visitor as ICODEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstant(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstantContext constant() {
		ConstantContext _localctx = new ConstantContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_constant);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTVAL) | (1L << FLOATVAL) | (1L << CHARVAL) | (1L << BOOLVAL) | (1L << STRINGVAL))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclaratorContext : ParserRuleContext {
		public ITerminalNode VARIABLENAME() { return GetToken(CODEParser.VARIABLENAME, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public DeclaratorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declarator; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.EnterDeclarator(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.ExitDeclarator(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICODEVisitor<TResult> typedVisitor = visitor as ICODEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclarator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclaratorContext declarator() {
		DeclaratorContext _localctx = new DeclaratorContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_declarator);
		try {
			State = 95;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,7,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 91; Match(VARIABLENAME);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 92; Match(VARIABLENAME);
				State = 93; Match(T__2);
				State = 94; expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclaratorlistContext : ParserRuleContext {
		public DeclaratorContext declarator() {
			return GetRuleContext<DeclaratorContext>(0);
		}
		public DeclaratorlistContext declaratorlist() {
			return GetRuleContext<DeclaratorlistContext>(0);
		}
		public DeclaratorlistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaratorlist; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.EnterDeclaratorlist(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.ExitDeclaratorlist(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICODEVisitor<TResult> typedVisitor = visitor as ICODEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaratorlist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclaratorlistContext declaratorlist() {
		DeclaratorlistContext _localctx = new DeclaratorlistContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_declaratorlist);
		try {
			State = 102;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,8,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 97; declarator();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 98; declarator();
				State = 99; Match(T__4);
				State = 100; declaratorlist();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhileBlockContext : ParserRuleContext {
		public ITerminalNode WHILE() { return GetToken(CODEParser.WHILE, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode[] NEWLINE() { return GetTokens(CODEParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(CODEParser.NEWLINE, i);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public WhileBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whileBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.EnterWhileBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.ExitWhileBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICODEVisitor<TResult> typedVisitor = visitor as ICODEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhileBlockContext whileBlock() {
		WhileBlockContext _localctx = new WhileBlockContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_whileBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104; Match(WHILE);
			State = 105; Match(T__5);
			State = 106; expression(0);
			State = 107; Match(T__6);
			State = 108; Match(NEWLINE);
			State = 109; Match(T__7);
			State = 110; Match(NEWLINE);
			State = 111; block();
			State = 112; Match(NEWLINE);
			State = 113; Match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICODEVisitor<TResult> typedVisitor = visitor as ICODEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHILE) | (1L << DATATYPE) | (1L << FUNCTIONNAME) | (1L << VARIABLENAME))) != 0)) {
				{
				{
				State = 115; line();
				}
				}
				State = 120;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	 
		public ExpressionContext() { }
		public virtual void CopyFrom(ExpressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ConstantExpressionContext : ExpressionContext {
		public ConstantContext constant() {
			return GetRuleContext<ConstantContext>(0);
		}
		public ConstantExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.EnterConstantExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.ExitConstantExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICODEVisitor<TResult> typedVisitor = visitor as ICODEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstantExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VariablenameExpressionContext : ExpressionContext {
		public ITerminalNode VARIABLENAME() { return GetToken(CODEParser.VARIABLENAME, 0); }
		public VariablenameExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.EnterVariablenameExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
			if (typedListener != null) typedListener.ExitVariablenameExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICODEVisitor<TResult> typedVisitor = visitor as ICODEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariablenameExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FunctionCallExpressionContext : ExpressionContext {
		public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public FunctionCallExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICODEListener typedListener = listener as ICODEListener;
